@@ -1,5 +1,6 @@
 	* added support for torrents with odd piece sizes
 	* fixed issue with disk read cache not being cleared when removing torrents
+	* made the DHT socket bind to the same interface as the session
 
 release 0.14.9
 
